@@ -1,5 +1,9 @@
 2021-03-15  Allen D. Ball  <ball@hcf.dev>
 
+	* src/main/java/ganymede/shell/magic/Scala.java:
+	Initial writing (but need to address
+	https://github.com/scala/bug/issues/11754).
+
 	* src/main/java/ganymede/kernel/JupyterRestClient.java:
 	Initial writing.
 
